# robotics_transformer

./: .fdignore  .gitattributes  .pylintrc  CHANGELOG.md  METADATA  OWNERS  README.md  __init__.py  pyproject.toml  robotics_transformer.blueprint  sequence_agent.py  transformer_network.py  transformer_network_test_set_up.py
docs/: cache_title.json  metadata.json  sitemap.xml  tree.html
docs/data/: 0.json  1.json  2.json  3.json
docs/doc/: 03a9eedb-2793-4cb1-a315-d148bea34d25.json  0615d6d5-7d46-45be-bce5-428027f676d0.json  0a32f8bb-3410-4c19-9073-d95a00ea4b2d.json  21d45b7e-1656-4c11-a68e-f6edb5e87db3.json  26487b69-3716-460f-9050-a5c31ab7bb86.json  272c947f-7969-4a7a-a797-26872465670c.json  3d7e01c9-823e-438f-bb93-0d1f2a88a91a.json  4f0a4608-2b66-4250-a52b-08b26cbecbbf.json  51b11964-bc55-4dc9-8055-7967970874f9.json  57c4f7c4-b86f-4782-a549-943305fdece0.json  5c4abc96-721d-4382-9c00-0f33d4d99682.json  5c95095b-ee51-4352-ad96-1fc821009eb9.json  6345da82-1e42-43f4-924d-8aceea89de83.json  641dc83d-62d3-4cd3-b01d-91aa057a5bd5.json  73f7813e-16f1-4aa3-b853-1fe29df575e5.json  809a02c5-7cfb-4c56-9441-fdef51d3d414.json  8b2cbba1-043f-47b8-8db0-4beb34bf14d2.json  8f852bc0-8cd2-4d5a-8b0b-fcaab2aac343.json  9075b4b2-7146-4b02-a1c6-1d08b75e1889.json  94b0da53-2f07-4b44-b1b0-1f7d10543e0a.json  9c442b1c-a574-4c4d-9eb7-ac786ee1a1b8.json  a3cd9292-474a-497d-beee-3636f6b980e7.json  (+5 more)
docs/src/: README.md  requirements.txt  (+6 more)
film_efficientnet/: film_conditioning_layer_test.py  film_efficientnet_encoder_test.py  pretrained_efficientnet_encoder.py  pretrained_efficientnet_encoder_test.py
(+34 files in other folders)
